# my_manga_editor

./: .firebaserc  .gitignore  .mise.mac.toml  .mise.toml  AGENTS.md  CLAUDE.md  LICENSE  README.md  analysis_options.yaml  firebase.json  firestore.rules  mise.mac.toml  mise.toml  pubspec.yaml
.claude/: settings.local.json
.claude/rules/: ci.md  code-generation.md  data-layer.md  providers.md  routing.md
.github/workflows/: main.yml
.specify/memory/: constitution.md
android/app/: build.gradle  google-services.json
docs/design/: architecture.md  data-model.md
docs/spec/: README.md
firebase/dev/: GoogleService-Info.plist  google-services.json
firebase/prod/: GoogleService-Info.plist
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: env_config.dart  firebase_options.dart  firebase_options_dev.dart  main.dart  main_page.dart  main_page.freezed.dart  manga.g.dart  manga_page_widget.dart  quill_controller_hoook.dart  router.dart  router.g.dart
lib/database/: database.dart  database.g.dart
lib/models/: manga.dart  manga.freezed.dart  manga.g.dart
lib/repositories/: ai_repository.dart  manga_providers.dart  manga_providers.g.dart  manga_repository.dart  manga_repository.g.dart
lib/views/: ai_comment_area.dart  tategaki.dart  (+8 more)
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
scripts/: switch_firebase_env.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+163 files in other folders)
