[package]
name = "rust_lib_my_manga_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
once_cell = "1.21.3"
rig-core = "0.12.0"
tokio = { version = "1.45", default-features = false, features = ["sync"] }
web-sys = "0.3.77"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
